--- a/titinic.ipynb
+++ b/titinic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -130,46 +130,157 @@
        "      <td>NaN</td>\n",
        "      <td>S</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>886</th>\n",
+       "      <td>887</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Montvila, Rev. Juozas</td>\n",
+       "      <td>male</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>211536</td>\n",
+       "      <td>13.0000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>887</th>\n",
+       "      <td>888</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Graham, Miss. Margaret Edith</td>\n",
+       "      <td>female</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>112053</td>\n",
+       "      <td>30.0000</td>\n",
+       "      <td>B42</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>888</th>\n",
+       "      <td>889</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Johnston, Miss. Catherine Helen \"Carrie\"</td>\n",
+       "      <td>female</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>W./C. 6607</td>\n",
+       "      <td>23.4500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>889</th>\n",
+       "      <td>890</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Behr, Mr. Karl Howell</td>\n",
+       "      <td>male</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>111369</td>\n",
+       "      <td>30.0000</td>\n",
+       "      <td>C148</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>890</th>\n",
+       "      <td>891</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Dooley, Mr. Patrick</td>\n",
+       "      <td>male</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>370376</td>\n",
+       "      <td>7.7500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Q</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>891 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   PassengerId  Survived  Pclass  \\\n",
-       "0            1         0       3   \n",
-       "1            2         1       1   \n",
-       "2            3         1       3   \n",
-       "3            4         1       1   \n",
-       "4            5         0       3   \n",
+       "     PassengerId  Survived  Pclass  \\\n",
+       "0              1         0       3   \n",
+       "1              2         1       1   \n",
+       "2              3         1       3   \n",
+       "3              4         1       1   \n",
+       "4              5         0       3   \n",
+       "..           ...       ...     ...   \n",
+       "886          887         0       2   \n",
+       "887          888         1       1   \n",
+       "888          889         0       3   \n",
+       "889          890         1       1   \n",
+       "890          891         0       3   \n",
        "\n",
-       "                                                Name     Sex   Age  SibSp  \\\n",
-       "0                            Braund, Mr. Owen Harris    male  22.0      1   \n",
-       "1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
-       "2                             Heikkinen, Miss. Laina  female  26.0      0   \n",
-       "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
-       "4                           Allen, Mr. William Henry    male  35.0      0   \n",
+       "                                                  Name     Sex   Age  SibSp  \\\n",
+       "0                              Braund, Mr. Owen Harris    male  22.0      1   \n",
+       "1    Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
+       "2                               Heikkinen, Miss. Laina  female  26.0      0   \n",
+       "3         Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
+       "4                             Allen, Mr. William Henry    male  35.0      0   \n",
+       "..                                                 ...     ...   ...    ...   \n",
+       "886                              Montvila, Rev. Juozas    male  27.0      0   \n",
+       "887                       Graham, Miss. Margaret Edith  female  19.0      0   \n",
+       "888           Johnston, Miss. Catherine Helen \"Carrie\"  female   NaN      1   \n",
+       "889                              Behr, Mr. Karl Howell    male  26.0      0   \n",
+       "890                                Dooley, Mr. Patrick    male  32.0      0   \n",
        "\n",
-       "   Parch            Ticket     Fare Cabin Embarked  \n",
-       "0      0         A/5 21171   7.2500   NaN        S  \n",
-       "1      0          PC 17599  71.2833   C85        C  \n",
-       "2      0  STON/O2. 3101282   7.9250   NaN        S  \n",
-       "3      0            113803  53.1000  C123        S  \n",
-       "4      0            373450   8.0500   NaN        S  "
+       "     Parch            Ticket     Fare Cabin Embarked  \n",
+       "0        0         A/5 21171   7.2500   NaN        S  \n",
+       "1        0          PC 17599  71.2833   C85        C  \n",
+       "2        0  STON/O2. 3101282   7.9250   NaN        S  \n",
+       "3        0            113803  53.1000  C123        S  \n",
+       "4        0            373450   8.0500   NaN        S  \n",
+       "..     ...               ...      ...   ...      ...  \n",
+       "886      0            211536  13.0000   NaN        S  \n",
+       "887      0            112053  30.0000   B42        S  \n",
+       "888      2        W./C. 6607  23.4500   NaN        S  \n",
+       "889      0            111369  30.0000  C148        C  \n",
+       "890      0            370376   7.7500   NaN        Q  \n",
+       "\n",
+       "[891 rows x 12 columns]"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "train_data = pd.read_csv(\"./train.csv\")\n",
-    "train_data.head()"
+    "train_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +408,7 @@
        "4  22.0      1      1  3101298  12.2875   NaN        S  "
       ]
      },
-     "execution_count": 181,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +503,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PassengerId      0\n",
+       "Survived         0\n",
+       "Pclass           0\n",
+       "Name             0\n",
+       "Sex              0\n",
+       "Age            177\n",
+       "SibSp            0\n",
+       "Parch            0\n",
+       "Ticket           0\n",
+       "Fare             0\n",
+       "Cabin          687\n",
+       "Embarked         2\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +675,7 @@
        "max      6.000000  512.329200  "
       ]
      },
-     "execution_count": 185,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +707,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -763,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -776,20 +919,20 @@
        "Dr            7\n",
        "Rev           6\n",
        "Mlle          2\n",
-       "Major         2\n",
        "Col           2\n",
-       "Lady          1\n",
-       "Capt          1\n",
-       "Jonkheer      1\n",
+       "Major         2\n",
+       "Don           1\n",
+       "Countess      1\n",
        "Mme           1\n",
+       "Lady          1\n",
+       "Jonkheer      1\n",
        "Sir           1\n",
        "Ms            1\n",
-       "Countess      1\n",
-       "Don           1\n",
+       "Capt          1\n",
        "Name: Title, dtype: int64"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -810,15 +953,15 @@
        "Miss       78\n",
        "Mrs        72\n",
        "Master     21\n",
-       "Rev         2\n",
        "Col         2\n",
-       "Dona        1\n",
+       "Rev         2\n",
        "Dr          1\n",
+       "Dona        1\n",
        "Ms          1\n",
        "Name: Title, dtype: int64"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1000,7 +1143,7 @@
        "4      0            373450   8.0500   NaN        S      0  "
       ]
      },
-     "execution_count": 197,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1011,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1040,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1081,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1215,7 +1358,7 @@
        "4            373450   8.0500   NaN        S      0  "
       ]
      },
-     "execution_count": 201,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1235,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1279,7 +1422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1310,7 +1453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1321,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1360,16 +1503,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f1f35a7db90>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fa38e793310>"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1404,7 +1547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1414,7 +1557,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1548,7 +1698,7 @@
        "4   8.0500   NaN        S      0  "
       ]
      },
-     "execution_count": 208,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1566,7 +1716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1585,7 +1735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1595,7 +1745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1629,7 +1779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1656,7 +1806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1895,7 +2045,7 @@
        "[891 rows x 12 columns]"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1913,27 +2063,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "G6             4\n",
        "B96 B98        4\n",
        "C23 C25 C27    4\n",
-       "G6             4\n",
-       "D              3\n",
        "E101           3\n",
+       "C22 C26        3\n",
        "              ..\n",
-       "B30            1\n",
-       "D30            1\n",
-       "B50            1\n",
-       "A10            1\n",
        "E68            1\n",
+       "A10            1\n",
+       "A19            1\n",
+       "D49            1\n",
+       "C118           1\n",
        "Name: Cabin, Length: 147, dtype: int64"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1951,12 +2101,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "C    59\n",
+       "B    47\n",
+       "D    33\n",
+       "E    32\n",
+       "A    15\n",
+       "F    13\n",
+       "G     4\n",
+       "T     1\n",
+       "Name: Cabin, dtype: int64"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "for dataset in Data:\n",
-    "    dataset['Cabin'] = dataset['Cabin'].str[:1]"
+    "    dataset['Cabin'] = dataset['Cabin'].str[:1]\n",
+    "train_data.Cabin.value_counts()"
    ]
   },
   {
@@ -2329,35 +2499,6 @@
    ],
    "source": [
     "X.shape, y.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 235,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test = test.fillna(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 238,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(418, 9)"
-      ]
-     },
-     "execution_count": 238,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test.shape"
    ]
   },
   {
